--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -36,10 +36,12 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-                        @Html.ActionLink("Home","Index","Home")<img src="~/Content/img/logo.png" alt="" title="" />
+                        @Html.ActionLink("Home", "Index", "Home")<img src="~/Content/img/logo.png" alt="" title=""/>
                     </div>
+
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                        <a class="btns" href="tel:+880-123456789">+880-123456789</a>
+                        <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
+                        <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
                         <a class="btns" href="mailto:support@bcc.com.bd">support@bcc.com.bd</a>
                         <a class="icons" href="tel:+880-123456789">
                             <span class="lnr lnr-phone-handset"></span>
@@ -47,6 +49,9 @@
                         <a class="icons" href="mailto:support@bcc.com.bd">
                             <span class="lnr lnr-envelope"></span>
                         </a>
+                    </div>
+                    <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+                        
                     </div>
                 </div>
             </div>
@@ -66,7 +71,7 @@
                             </ul>
                         </li>
                         <li class="menu-has-children">
-                            @Html.ActionLink("Department", "Index", "Departments")
+                            <a href="#">Department</a>
                             <ul>
                                 <li>@Html.ActionLink("Create New", "Create", "Departments")</li>
                                 <li>@Html.ActionLink("List Of Department", "Index", "Departments")</li>
@@ -80,10 +85,24 @@
                             </ul>
                         </li>
                         <li class="menu-has-children">
-                            @Html.ActionLink("Employee", "Index", "Employees")
+                            <a href="#">Employee</a>
                             <ul>
                                 <li>@Html.ActionLink("Create New", "Create", "Employees")</li>
-                                <li>@Html.ActionLink("List Of Employee", "Index", "Employees")</li>   
+                                <li>@Html.ActionLink("List Of Employee", "Index", "Employees")</li>
+                            </ul>
+                        </li>
+                        <li class="menu-has-children">
+                            <a href="#">Vehicle</a>
+                            <ul>
+                                <li>@Html.ActionLink("Create New", "Create", "Vehicles")</li>
+                                <li>@Html.ActionLink("List Of Vehicles", "Index", "Vehicles")</li>
+                                <li class="menu-has-children">
+                                    <a href="">Vehicle Types</a>
+                                    <ul>
+                                        <li>@Html.ActionLink("Create New", "Create", "VehicleTypes")</li>
+                                        <li>@Html.ActionLink("List Of Vehile Types", "Index", "VehicleTypes")</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                         <li>@Html.ActionLink("Designation", "Index", "Designations")</li>
@@ -135,13 +154,21 @@
         </div>
     </section>
     <!-- End banner Area -->
-    <!-- Start service Area -->
+<!-- Start service Area -->
+    
+                
+                        
+            
+            
+         
+
     <section class="service-area">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-12 pb-40 header-text text-center">
-                    @RenderBody()
                     
+                    @RenderBody()
+
                 </div>
             </div>
             <div class="row">
