Override method Implementation with Employee and Vehicle Repository

--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -12,46 +12,46 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Department.Name)
+            Department Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Designation.Title)
+            Designation
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Organization.Name)
+            Organization
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FullName)
+            Full Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContactNo)
+            Contact No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NID)
+            National Identity No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BloodGroup)
+            Blood Group
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.HouseNo)
+            House No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RoadNo)
+            Road No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FloorNo)
+            Floor No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PostOffice)
+            Post Office
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.District)
+            District
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Division)
+            Division
         </th>
         <th></th>
     </tr>
