--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -12,19 +12,19 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.VehicleType.Name)
+            Vehicle Type
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BrandName)
+            Brand Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ModelName)
+            Model
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RegNo)
+            Registration No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ChassisNo)
+            Chassis No
         </th>
         <th></th>
     </tr>
