--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model RMS.Models.EntityModels.Organization
+﻿
+@model RMS.Models.EntityModels.Organization
 
 @{
     ViewBag.Title = "Create";
 }
 
 <h2>To Create Organization</h2>
-
 
 @using (Html.BeginForm()) 
 {
@@ -17,11 +17,12 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "col-md-4" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            
+
         </div>
 
         <div class="form-group">
@@ -29,7 +30,7 @@
             
                 @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "col-md-4" } })
                 @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-            
+
         </div>
 
         <div class="form-group">
@@ -37,7 +38,7 @@
             
                 @Html.EditorFor(model => model.RegNo, new { htmlAttributes = new { @class = "col-md-4" } })
                 @Html.ValidationMessageFor(model => model.RegNo, "", new { @class = "text-danger" })
-            
+
         </div>
 
         <div class="form-group">
