--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
 
                 </div>
             </div>
-            <div class="row">
+            @*<div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="single-service">
                         <img class="img-fluid" src="~/Content/img/s1.jpg" alt="">
@@ -208,7 +208,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
     </section>
     <!-- End service Area -->
