--- a/RMS.App/Views/Home/Contact.cshtml
+++ b/RMS.App/Views/Home/Contact.cshtml
@@ -3,10 +3,39 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+<style>
+    /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+    #map {
+        height: 100%;
+    }
+    /* Optional: Makes the sample page fill the window. */
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+</style>
 
+<div class="row">
+    <div class="col-md-12">
+        <div id="map"></div>
+        <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"
+                async defer></script>
+    </div>
+</div>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Information Technology Division<br />
+    Agargoan<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
