--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -40,19 +40,16 @@
                     </div>
 
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                        <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
-                        <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
-                        <a class="btns" href="mailto:support@bcc.com.bd">support@bcc.com.bd</a>
-                        <a class="icons" href="tel:+880-123456789">
+                        <a class="btns" href="tel:+1234567890">+1234567890</a>
+                        <a class="btns" href="mailto:support@bcc.gov.bd">support@bcc.gov.bd</a>
+                        <a class="icons" href="tel:+1234567890">
                             <span class="lnr lnr-phone-handset"></span>
                         </a>
-                        <a class="icons" href="mailto:support@bcc.com.bd">
+                        <a class="icons" href="mailto:support@bcc.gov.bd">
                             <span class="lnr lnr-envelope"></span>
-                        </a>
+                        </a>	
                     </div>
-                    <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                        
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -292,7 +289,7 @@
     <script src="~/Content/js/owl.carousel.min.js"></script>
     <script src="~/Content/js/jquery.nice-select.min.js"></script>
     <script src="~/Content/js/mail-script.js"></script>
-<script src="~/Content/js/main.js"></script>
+    <script src="~/Content/js/main.js"></script>
     @*@Scripts.Render("~/bundles/jquery")*@
     @RenderSection("scripts", required: false)
 </body>
