--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -3,12 +3,23 @@
 @{
     ViewBag.Title = "Index";
 }
+<br/>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+        </div>
 
-<h2>Index</h2>
+        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+            <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
+            <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
+        </div>
+    </div>
+</div>
+<br />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -20,26 +31,29 @@
         <th>
             @Html.DisplayNameFor(model => model.Code)
         </th>
-        <th></th>
+        <th>Action</th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Organization.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Code)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Organization.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Code)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", "Departments", new {id = item.Id}) |
+                @Html.ActionLink("Details", "Details", "Departments", new {id = item.Id}) |
+                @Html.ActionLink("Delete", "Delete", "Departments", new {id = item.Id})
+            </td>
+        </tr>
+    }
 
 </table>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/DepartmentJs/CreateDepartment.js"></script>
