--- a/RMS.App/Views/VehicleTypes/Index.cshtml
+++ b/RMS.App/Views/VehicleTypes/Index.cshtml
@@ -4,11 +4,23 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<br />
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+        </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+            <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
+            <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
+        </div>
+    </div>
+</div>
+<br />
+
 <table class="table">
     <tr>
         <th>
