--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model RMS.Models.EntityModels.Organization
+@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -42,11 +42,10 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-0 col-md-12">
+            <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default"/>
-
                 
-                    @Html.ActionLink("Back to List", "Index")
+                 @Html.ActionLink("Back to List", "Index",null, htmlAttributes:new {@class="btn btn-info"})
                 
             </div>
         </div>
