--- a/RMS.App/Views/Organizations/Details.cshtml
+++ b/RMS.App/Views/Organizations/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.Organization
+﻿@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id},htmlAttributes:new {@class="btn btn-warning"})
+    @Html.ActionLink("Back to List", "Index",null, htmlAttributes: new {@class="btn btn-info"})
 </p>
