--- a/RMS.App/Views/Organizations/Edit.cshtml
+++ b/RMS.App/Views/Organizations/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.Organization
+﻿@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -43,15 +43,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default"/>
+                @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
