--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -1,14 +1,20 @@
-﻿@model IEnumerable<RMS.Models.EntityModels.Department>
+﻿@model IEnumerable<RMS.App.ViewModels.DepartmentViewMode>
 
 @{
     ViewBag.Title = "Index";
 }
 <br/>
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-info">
+        @Html.Raw(TempData["msg"])
+    </div>
+}
 <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create")
+                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
             </p>
         </div>
 
@@ -20,8 +26,11 @@
 </div>
 <br />
 
-<table class="table">
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Organization.Name)
         </th>
@@ -33,25 +42,40 @@
         </th>
         <th>Action</th>
     </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Organization.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", "Departments", new {id = item.Id}) |
-                @Html.ActionLink("Details", "Details", "Departments", new {id = item.Id}) |
-                @Html.ActionLink("Delete", "Delete", "Departments", new {id = item.Id})
-            </td>
-        </tr>
+    @{
+        var sl = 0;
+        if (Model.Count()!=0)
+        {
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Organization.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Code)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="5"> Data Not Found!</td>
+            </tr>
+        }
     }
 
 </table>
