Designation validation added

--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RMS.App.ViewModels.DepartmentViewMode>
+﻿@model IEnumerable<RMS.App.ViewModels.DepartmentViewModel>
 
 @{
     ViewBag.Title = "Index";
