--- a/RMS.App/Views/Designations/Create.cshtml
+++ b/RMS.App/Views/Designations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.Designation
+﻿@model RMS.App.ViewModels.DesignationViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-6">
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
@@ -26,9 +26,7 @@
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
                 <input type="submit" value="Create" class="btn btn-default" />
-
-
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
 
             </div>
         </div>
