--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -7,14 +7,25 @@
 <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-            <p>
-                @Html.ActionLink("Create New", "Create")
-            </p>
+           
+                <p>
+                    @Html.ActionLink("Create New", "Create")
+                </p>
+            
         </div>
 
         <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-            <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
-            <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
+            <p>
+                @using (Html.BeginForm("Index", "Departments", FormMethod.Get))
+                {
+
+                    <b>Search</b>
+                    @Html.TextBox("searchText")
+                    <input type="submit" value="Search" />
+
+                }
+            </p>
+
         </div>
     </div>
 </div>
@@ -23,7 +34,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Organization.Name)
+            Organization
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -33,7 +44,7 @@
         </th>
         <th>Action</th>
     </tr>
-
+    
     @foreach (var item in Model)
     {
         <tr>
