--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/s1.jpg" alt="">
+                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
                     <a href="#"><h4>Popular Use Of The Internet</h4></a>
                     <p>
                         inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
@@ -80,7 +80,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/s2.jpg" alt="">
+                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
                     <a href="#"><h4>Protective Preventative</h4></a>
                     <p>
                         inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
@@ -89,7 +89,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/s3.jpg" alt="">
+                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
                     <a href="#"><h4>Download Free Songs</h4></a>
                     <p>
                         inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/s4.jpg" alt="">
+                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
                     <a href="#"><h4>A Discount Toner Cartridge</h4></a>
                     <p>
                         inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
