--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-                    @Html.ActionLink("Home", "Index", "Home")<img src="~/Content/img/logo.png" alt="" title="" />
+                    @Html.ActionLink( "Index", "Home")<img src="~/Content/img/logo.png" alt="" title="" />
                 </div>
 
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -36,23 +36,24 @@
                             <ul>
                                 <li>@Html.ActionLink("Create New", "Create", "Organizations")</li>
                                 <li>@Html.ActionLink("Organization List", "Index", "Organizations")</li>
+                                <li class="menu-has-children">
+                                    <a href="#">Department</a>
+                                    <ul>
+                                        <li>@Html.ActionLink("Create New", "Create", "Departments")</li>
+                                        <li>@Html.ActionLink("List Of Department", "Index", "Departments")</li>
+                                        <li class="menu-has-children">
+                                            <a href="#">Designation</a>
+                                            <ul>
+                                                <li>@Html.ActionLink("Create New", "Create", "Designations")</li>
+                                                <li>@Html.ActionLink("List Of Designation", "Index", "Designations")</li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
-                        <li class="menu-has-children">
-                            <a href="#">Department</a>
-                            <ul>
-                                <li>@Html.ActionLink("Create New", "Create", "Departments")</li>
-                                <li>@Html.ActionLink("List Of Department", "Index", "Departments")</li>
-
-                            </ul>
-                        </li>
-                        <li class="menu-has-children">
-                            <a href="#">Designation</a>
-                            <ul>
-                                <li>@Html.ActionLink("Create New", "Create", "Designations")</li>
-                                <li>@Html.ActionLink("List Of Designation", "Index", "Designations")</li>
-                            </ul>
-                        </li>
+                        
+                        
                         <li class="menu-has-children">
                             <a href="#">Employee</a>
                             <ul>
@@ -65,17 +66,20 @@
                             <ul>
                                 <li>@Html.ActionLink("Create New", "Create", "Vehicles")</li>
                                 <li>@Html.ActionLink("List Of Vehicle", "Index", "Vehicles")</li>
-                            </ul>
-                            </li>>
                                 <li class="menu-has-children">
                                     <a href="#">Vehicle Types</a>
+
                                     <ul>
                                         <li>@Html.ActionLink("Create New", "Create", "VehicleTypes")</li>
                                         <li>@Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")</li>
                                     </ul>
+
                                 </li>
-                        <li>@Html.ActionLink("Send Requisition", "Create", "Requisitions")</li>
                             </ul>
+                        </li>
+
+                        <li>@Html.ActionLink("Send Requisition", "Create", "Requisitions")</li>
+                    </ul>        
                         
                         
 
