--- a/RMS.App/Views/VehicleTypes/Create.cshtml
+++ b/RMS.App/Views/VehicleTypes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.VehicleType
+﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-6">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
@@ -25,15 +25,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default"/>
+                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
