--- a/RMS.App/Views/VehicleTypes/Delete.cshtml
+++ b/RMS.App/Views/VehicleTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.VehicleType
+﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -25,8 +25,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />  
+            @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
 </div>
