--- a/RMS.App/Views/VehicleTypes/Details.cshtml
+++ b/RMS.App/Views/VehicleTypes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.VehicleType
+﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) 
+    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
 </p>
