--- a/RMS.App/Views/VehicleTypes/Index.cshtml
+++ b/RMS.App/Views/VehicleTypes/Index.cshtml
@@ -1,15 +1,21 @@
-﻿@model IEnumerable<RMS.Models.EntityModels.VehicleType>
+﻿@model IEnumerable<RMS.App.ViewModels.VehicleTypeViewModel>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<br />
+<br/>
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-info">
+        @Html.Raw(TempData["msg"])
+    </div>
+}
 <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create")
+                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-info"})
             </p>
         </div>
 
@@ -21,25 +27,46 @@
 </div>
 <br />
 
-<table class="table">
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @{
+        var sl = 0;
+        if (Model.Count()!=0)
+        {
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="3"> Data Not Found!</td>
+            </tr>
+        }
+    }
 
 </table>
