--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -1,14 +1,20 @@
-﻿@model IEnumerable<RMS.Models.EntityModels.Requisition>
+﻿@model IEnumerable<RMS.App.ViewModels.RequisitionViewModel>
 
 @{
     ViewBag.Title = "Index";
 }
-
+<br/>
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-info">
+        @Html.Raw(TempData["msg"])
+    </div>
+}
 <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create")
+                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
             </p>
         </div>
 
@@ -20,8 +26,11 @@
 </div>
 <br />
 
-<table class="table">
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <td>
+            SL
+        </td>
         <th>
             @Html.DisplayNameFor(model => model.Employee.FullName)
         </th>
@@ -43,38 +52,57 @@
         <th>
             @Html.DisplayNameFor(model => model.RequestFor)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
+    @{
+        var sl = 0;
+        if (Model.Count()!=0)
+        {
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Employee.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FromPlace)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DestinationPlace)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StartDateTime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EndDateTime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequestFor)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="9"> Data Not Found!</td>
+            </tr>
+        }
+    }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Employee.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FromPlace)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DestinationPlace)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDateTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDateTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequestFor)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
 
 </table>
